refactor: Edit href and src

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <script src="/assets/plugins/html5shiv.min.js"></script>
       <script src="/assets/plugins/respond.min.js"></script>
     <![endif]-->
-  <base href="https://hadimardanian.github.io/sepanta" />
+  <base href="https://hadimardanian.github.io/sepanta/" />
 </head>
 
 <body id="home" class="home">
