refactor: Edit href and src

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="construction is awesome bootstrap responsive construction business theme">
   <meta name="keywords" content="construction, business, construction business, responsive, parallax, business theme">
   <meta name="author" content="templateninja">
-  <title>Construction</title>
-
+  <title>سپنتا</title>
+  <base href="https://hadimardanian.github.io/" />
   <!-- Bootstrap -->
   <link href="/sepanta/public/css/vars.css" rel="stylesheet">
   <link href="/sepanta/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
       <script src="/sepanta/assets/plugins/html5shiv.min.js"></script>
       <script src="/sepanta/assets/plugins/respond.min.js"></script>
     <![endif]-->
-  <base href="https://hadimardanian.github.io/" />
+  
 </head>
 
 <body id="home" class="home">
